# eWeLink-API

./: .gitignore  README.md  pyproject.toml
ewelink_api/: auth.py  logging_config.py  main.py
ewelink_api/custom_types/: devices.py  region.py
ewelink_api/device/: __init__.py  camera.py  control_panel.py  device.py  smart_light.py  smart_plug.py  smart_switch.py  soil_moisture.py  thermostat.py
ewelink_api/utils/: __init__.py  get_epoch.py  instantiate_device.py  make_nonce.py
